feat: add shuffle matches and get matches the tournament
