# src/controllers/TournamentController.js
@@ -1,10 +1,12 @@
 const db = require("../config/database");
+const utils = require('../utils/utils');
+import MatchController from './MatchController';
 
 class TournamentController {
 
   async index(req, res) {
     const conn = await db.connect();
-    const [rows, fields] = await conn.execute('SELECT id_campeonato, nome, dataStartCampeonato, dataEndCampeonato, premiacao, qntdTimes, modalidade FROM campeonato');
+    const [rows, fields] = await conn.execute('SELECT id_campeonato, nome, dataStartCampeonato, dataEndCampeonato, premiacao, qntdTimes, modalidade, etapa FROM campeonato');
     
     return res.status(200).json({ data: rows })
   }
@@ -13,12 +15,61 @@ class TournamentController {
     const { id } = req.params;
     const conn = await db.connect();
 
-    const [rows, fields] = await conn.execute(`SELECT id_campeonato, nome, dataStartCampeonato, dataEndCampeonato, premiacao, qntdTimes, modalidade FROM campeonato WHERE id_campeonato=?`, [id]);
+    const [rows, fields] = await conn.execute(`SELECT id_campeonato, nome, dataStartCampeonato, dataEndCampeonato, premiacao, qntdTimes, modalidade, etapa FROM campeonato WHERE id_campeonato=?`, [id]);
     
     if (rows.length)
       return res.status(200).json({ data: rows[0] })
 
     return res.status(400).json({ message: 'Campeonato não encontrado.' })
+  }
+
+  async getRegisteredTeamsChampionship(id_campeonato) {
+    const conn = await db.connect();
+    
+    return await conn.execute(`SELECT tm.id_time, tm.nome FROM campeonato_times ct inner join time tm on ct.id_time=tm.id_time WHERE ct.id_campeonato=?`, [id_campeonato]);
+  }
+
+  async registeredTeamsChampionship(req, res) {
+    const { id } = req.params;
+    
+    const [rows, fields] = await new TournamentController().getRegisteredTeamsChampionship(id);
+
+    if (rows.length)
+      return res.status(200).json({ data: rows })
+
+    return res.status(400).json({ message: 'Nenhum time inscrito no campeonato.' })
+  }
+
+  async shuffleMatches(req, res) {
+    const { id  } = req.params;
+
+    const [rows, fields] = await new TournamentController().getRegisteredTeamsChampionship(id);
+    const shuffleMatches = utils.shuffleArray(rows)
+
+    for (let index = 0; index < shuffleMatches.length; index++) {
+      if (index % 2 === 0) {
+        continue
+      }
+
+      const teamA = shuffleMatches[index]
+      const teamB = shuffleMatches[index-1]
+      const dataPartida = new Date();
+      dataPartida.setHours(new Date().getHours() + index)
+      dataPartida.setMinutes(new Date().getMinutes() + 30)
+
+      const resultMatch = await MatchController.createMatch({ idTeamA: teamA.id_time, idTeamB: teamB.id_time, dataPartida, idCampeonato: id });
+    }
+
+    return res.status(200).json({ data: shuffleMatches, message: 'Partidas geradas.' });
+  }
+
+  async registerTeamChampionship(req, res) {
+    const { idTime, idCampeonato } = req.body;
+    const conn = await db.connect();
+
+    const [rows, fields] = await conn.execute(`INSERT INTO campeonato_times (id_campeonato, id_time) VALUES (?, ?)`, [idCampeonato, idTime ]);
+    
+    return res.status(200).json({ message: 'Time inscrito com sucesso.' });
   }
 
   async create(req, res) {
@@ -31,10 +82,10 @@ class TournamentController {
   }
 
   async update(req, res) {
-    const { id, nome, modalidade, dataStartCampeonato, dataEndCampeonato, premiacao, qntdTimes } = req.body;
+    const { id, nome, modalidade, dataStartCampeonato, dataEndCampeonato, premiacao, qntdTimes, stage } = req.body;
     const conn = await db.connect();
 
-    const [{affectedRows}, fields] = await conn.query('UPDATE campeonato SET ? WHERE id_campeonato=?', [ { nome, modalidade, dataStartCampeonato: new Date(dataStartCampeonato), dataEndCampeonato: new Date(dataEndCampeonato), premiacao, qntdTimes }, id]);
+    const [{affectedRows}, fields] = await conn.query('UPDATE campeonato SET ? WHERE id_campeonato=?', [ { nome, modalidade, dataStartCampeonato: new Date(dataStartCampeonato), dataEndCampeonato: new Date(dataEndCampeonato), premiacao, qntdTimes, etapa: stage }, id]);
 
     if (affectedRows)
       return res.status(200).json({ message: 'Campeonato atualizado com sucesso.' });
