# src/routes/v1/matches.routes.js
@@ -4,6 +4,7 @@ import MatchController from '../../controllers/MatchController';
 const matchRoutes = new Router();
 
 matchRoutes.get('/matches', MatchController.index);
+matchRoutes.get('/matchesTournament/:id', MatchController.getByTournamentId);
 matchRoutes.get('/match/:id', MatchController.getById);
 matchRoutes.post('/match', MatchController.create);
 matchRoutes.put('/match', MatchController.update);
