# src/routes/v1/tournaments.routes.js
@@ -5,6 +5,9 @@ const tournamentRoutes = new Router();
 
 tournamentRoutes.get('/tournaments', TournamentController.index);
 tournamentRoutes.get('/tournament/:id', TournamentController.getById);
+tournamentRoutes.get('/tournament/registeredTeamsChampionship/:id', TournamentController.registeredTeamsChampionship);
+tournamentRoutes.get('/tournament/shuffleMatches/:id', TournamentController.shuffleMatches);
+tournamentRoutes.post('/tournament/registerTeamChampionship', TournamentController.registerTeamChampionship);
 tournamentRoutes.post('/tournament', TournamentController.create);
 tournamentRoutes.put('/tournament', TournamentController.update);
 tournamentRoutes.delete('/tournament/:id', TournamentController.delete);
